// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouterHelpers should handle location search and hash passthrough values: NO search and hash 1`] = `
Object {
  "routeHref": "/rhel-sw/all",
}
`;

exports[`RouterHelpers should handle location search and hash passthrough values: hash 1`] = `
Object {
  "routeHref": "/rhel-sw/all#lorem",
}
`;

exports[`RouterHelpers should handle location search and hash passthrough values: search 1`] = `
Object {
  "routeHref": "/rhel-sw/all?dolor=sit",
}
`;

exports[`RouterHelpers should handle location search and hash passthrough values: search and hash 1`] = `
Object {
  "routeHref": "/rhel-sw/all?dolor=sit#lorem",
}
`;

exports[`RouterHelpers should return a generated baseName using NO path prefix: app lorem route name 1`] = `"/appName"`;

exports[`RouterHelpers should return a generated baseName using NO path prefix: empty pathPrefix: app base name 1`] = `"/appName"`;

exports[`RouterHelpers should return a generated baseName using NO path prefix: root reference pathPrefix: app base name 1`] = `"/appName"`;

exports[`RouterHelpers should return a generated baseName using NO path prefix: undefined pathPrefix: app base name 1`] = `"/appName"`;

exports[`RouterHelpers should return a generated baseName using a beta path prefix: app base name 1`] = `"/appName"`;

exports[`RouterHelpers should return a generated baseName using a beta path prefix: beta app base name 1`] = `"/beta/appName"`;

exports[`RouterHelpers should return a generated baseName using a beta path prefix: beta app lorem route name 1`] = `"/beta/appName"`;

exports[`RouterHelpers should return an error route: error route 1`] = `
Object {
  "activateOnError": true,
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "disabled": false,
  "exact": true,
  "id": "optin",
  "render": true,
  "to": "/optin",
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: match specific path navigation 1`] = `
Object {
  "nav": Object {
    "default": true,
    "id": "all",
    "path": "/rhel-sw/all",
    "pathId": "rhel-sw",
    "pathParameter": "RHEL",
    "productParameter": "productRHEL",
    "routeHref": "/rhel-sw/all",
  },
  "navRoute": Object {
    "component": Object {
      "$$typeof": Symbol(react.lazy),
      "_ctor": [Function],
      "_result": null,
      "_status": -1,
    },
    "default": true,
    "disabled": false,
    "exact": true,
    "id": "all",
    "path": "/rhel-sw/all",
    "pathId": "rhel-sw",
    "pathParameter": "RHEL",
    "productParameter": "productRHEL",
    "redirect": true,
    "render": true,
    "routeHref": "/rhel-sw/all",
    "to": "/rhel-sw/all",
  },
  "route": Object {
    "component": Object {
      "$$typeof": Symbol(react.lazy),
      "_ctor": [Function],
      "_result": null,
      "_status": -1,
    },
    "disabled": false,
    "exact": true,
    "redirect": true,
    "render": true,
    "to": "/rhel-sw/all",
  },
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing ID, specific path 1`] = `
Object {
  "nav": Object {
    "default": true,
    "id": "all",
    "path": "/rhel-sw/all",
    "pathId": "rhel-sw",
    "pathParameter": "RHEL",
    "productParameter": "productRHEL",
    "routeHref": "/rhel-sw/all",
  },
  "navRoute": Object {
    "component": Object {
      "$$typeof": Symbol(react.lazy),
      "_ctor": [Function],
      "_result": null,
      "_status": -1,
    },
    "default": true,
    "disabled": false,
    "exact": true,
    "id": "all",
    "path": "/rhel-sw/all",
    "pathId": "rhel-sw",
    "pathParameter": "RHEL",
    "productParameter": "productRHEL",
    "redirect": true,
    "render": true,
    "routeHref": "/rhel-sw/all",
    "to": "/rhel-sw/all",
  },
  "route": Object {
    "component": Object {
      "$$typeof": Symbol(react.lazy),
      "_ctor": [Function],
      "_result": null,
      "_status": -1,
    },
    "disabled": false,
    "exact": true,
    "redirect": true,
    "render": true,
    "to": "/rhel-sw/all",
  },
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing id and pathname and default 1`] = `
Object {
  "nav": Object {},
  "navRoute": Object {},
  "route": Object {},
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing id and pathname, default 1`] = `
Object {
  "nav": Object {
    "default": true,
    "id": "all",
    "path": "/rhel-sw/all",
    "pathId": "rhel-sw",
    "pathParameter": "RHEL",
    "productParameter": "productRHEL",
    "routeHref": "/rhel-sw/all",
  },
  "navRoute": Object {
    "component": Object {
      "$$typeof": Symbol(react.lazy),
      "_ctor": [Function],
      "_result": null,
      "_status": -1,
    },
    "default": true,
    "disabled": false,
    "exact": true,
    "id": "all",
    "path": "/rhel-sw/all",
    "pathId": "rhel-sw",
    "pathParameter": "RHEL",
    "productParameter": "productRHEL",
    "redirect": true,
    "render": true,
    "routeHref": "/rhel-sw/all",
    "to": "/rhel-sw/all",
  },
  "route": Object {},
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing parameters 1`] = `
Object {
  "nav": Object {},
  "navRoute": Object {},
  "route": Object {},
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: specific navigation ID 1`] = `
Object {
  "nav": Object {
    "id": "arm",
    "path": "/rhel-sw/arm",
    "pathId": "rhel-sw",
    "pathParameter": "RHEL for ARM",
    "productParameter": "productRHEL",
    "routeHref": "/rhel-sw/arm",
  },
  "navRoute": Object {
    "component": Object {
      "$$typeof": Symbol(react.lazy),
      "_ctor": [Function],
      "_result": null,
      "_status": -1,
    },
    "disabled": false,
    "exact": true,
    "id": "arm",
    "path": "/rhel-sw/arm",
    "pathId": "rhel-sw",
    "pathParameter": "RHEL for ARM",
    "productParameter": "productRHEL",
    "render": true,
    "routeHref": "/rhel-sw/arm",
    "to": "/rhel-sw/:variant",
  },
  "route": Object {},
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: specific route ID 1`] = `
Object {
  "nav": Object {},
  "navRoute": Object {},
  "route": Object {
    "activateOnError": true,
    "component": Object {
      "$$typeof": Symbol(react.lazy),
      "_ctor": [Function],
      "_result": null,
      "_status": -1,
    },
    "disabled": false,
    "exact": true,
    "id": "optin",
    "render": true,
    "to": "/optin",
  },
}
`;
